@@ -1,12 +1,41 @@
 <table border=0>
 <tr bgcolor=lightgreen>
+<td>23:02
+<td><td>
+<td>tag <b>qopqdp0-7-2</b> added
+</tr>
+<tr>
+<td colspan=4 bgcolor=lightblue><b>2006-10-30</b>
+<tr bgcolor=lightgrey>
+<td>23:02
+<td>osborn
+<td>
+NEWS
+1.4<br>
+configure
+1.14<br>
+configure.ac
+1.15<br>
+include/qop.h
+1.12<br>
+include/qop_qdp.h
+1.5<br>
+lib/asqtad_invert_p.c
+1.6<br>
+lib/symanzik_1loop_gauge_force_p.c
+1.2<br>
+<td>Changed meaning of eps parameter to gauge force.
+Added gauge loading functions.
+</tr>
+
+<tr bgcolor=lightgreen>
 <td>23:23
 <td><td>
 <td>tag <b>qopqdp0-7-1</b> added
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-09-26</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:23
 <td>osborn
 <td>
@@ -15,7 +44,7 @@ lib/Makefile.am
 <td>Fix Makefile.am.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:16
 <td>osborn
 <td>
@@ -24,7 +53,7 @@ examples/imp_gauge_force_bench.c
 <td>Changed FF to GF in output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:12
 <td>osborn
 <td>
@@ -39,7 +68,7 @@ lib/symanzik_1loop_gauge_force_p.c
 <td>Really add files.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>23:09
 <td>osborn
 <td>
@@ -70,7 +99,7 @@ Added gauge force code.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-06-25</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>13:32
 <td>osborn
 <td>
@@ -122,7 +151,7 @@ Must use QLA &gt;= 1.6.0 now in order to agree with Chroma.
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-05-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>20:12
 <td>osborn
 <td>
@@ -131,7 +160,7 @@ examples/test_common.h
 <td>Include qmp.h in examples.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:09
 <td>osborn
 <td>
@@ -152,7 +181,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>03:01
 <td>osborn
 <td>
@@ -173,7 +202,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>20:21
 <td>osborn
 <td>
@@ -190,7 +219,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-04-04</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:44
 <td>osborn
 <td>
@@ -203,7 +232,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-03-14</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:32
 <td>osborn
 <td>
@@ -214,7 +243,7 @@ configure.ac
 <td>Added CC, ect. to DISTCHECK_CONFIGURE_FLAGS.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:51
 <td>osborn
 <td>
@@ -223,7 +252,7 @@ include/Makefile.am
 <td>Added generic headers to Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:48
 <td>osborn
 <td>
@@ -240,7 +269,7 @@ examples/wilson_invert_bench.c
 <td>Allow selection of style in benchmarks.  Update version.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>00:54
 <td>osborn
 <td>
@@ -305,7 +334,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-09</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:05
 <td>osborn
 <td>
@@ -318,7 +347,7 @@ lib/wilson_invert_p.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-02-03</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>18:23
 <td>osborn
 <td>
@@ -329,7 +358,7 @@ lib/wilson_invert_f.c
 <td>Added missing files.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:21
 <td>osborn
 <td>
@@ -369,7 +398,7 @@ lib/wilson_invert_p.c
 </tr>
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2006-01-13</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:12
 <td>osborn
 <td>
@@ -378,7 +407,7 @@ lib/Makefile.am
 <td>Fixed lib Makefile.am.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>21:55
 <td>osborn
 <td>
@@ -423,7 +452,7 @@ lib/wilsonp.c
 <td>Moved many files around.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>21:50
 <td>osborn
 <td>
@@ -454,7 +483,7 @@ lib/common.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:17
 <td>osborn
 <td>
@@ -493,7 +522,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-16</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>05:47
 <td>osborn
 <td>
@@ -504,7 +533,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-15</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>19:23
 <td>osborn
 <td>
@@ -525,7 +554,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-12</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>06:16
 <td>osborn
 <td>
@@ -536,7 +565,7 @@ lib/wilsonp.c
 <td>Changed Wilson inverter code.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>05:41
 <td>osborn
 <td>
@@ -573,7 +602,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-08</b>
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:03
 <td>osborn
 <td>
@@ -596,7 +625,7 @@ lib/wilsonp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-09-01</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>02:02
 <td>osborn
 <td>
@@ -607,7 +636,7 @@ examples/asqtad_test.c
 <td>Small change in test, reran aotoreconf.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>01:51
 <td>osborn
 <td>
@@ -624,7 +653,7 @@ lib/asqtadp.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-29</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>23:26
 <td>osborn
 <td>
@@ -635,7 +664,7 @@ include/qop.h
 <td>Fixed flop bug.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>22:58
 <td>osborn
 <td>
@@ -644,7 +673,7 @@ examples/asqtad_test.c
 <td>Small change to test program output.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>22:52
 <td>osborn
 <td>
@@ -659,7 +688,7 @@ lib/asqtadp.c
 <td>Added new style of dslash and optimization options.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>19:24
 <td>osborn
 <td>
@@ -670,7 +699,7 @@ lib/asqtadp.c
 <td>More changes to test program.
 </tr>
 
-<tr bgcolor=lightgrey>
+<tr>
 <td>18:34
 <td>osborn
 <td>
@@ -679,7 +708,7 @@ examples/asqtad_test.c
 <td>Changes in test program.
 </tr>
 
-<tr>
+<tr bgcolor=lightgrey>
 <td>17:36
 <td>osborn
 <td>
@@ -694,7 +723,7 @@ examples/asqtad_test.c
 
 <tr>
 <td colspan=4 bgcolor=lightblue><b>2005-08-27</b>
-<tr bgcolor=lightgrey>
+<tr>
 <td>03:26
 <td>osborn
 <td>
@@ -750,4 +779,4 @@ lib/asqtadp.c
 </tr>
 
 </table>
-<p>This page was created on Fri Oct 20 16:15:32 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
+<p>This page was created on Tue Oct 31 11:17:03 2006 using <a href="http://josefsson.org/cl2html/">cl2html</a> written by Simon Josefsson.
